# ai-hindi-tutor

./: .gitignore  README.md  app.py  openai-docs.md  pyproject.toml  requirements.txt
backend/: db.py  main.py  requirements.txt
backend/data/: phrases.json  system_prompt.txt
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.jsx  App.tsx
frontend/src/config/: constants.ts
frontend/src/lib/wavtools/: wav_renderer.ts
frontend/src/pages/: ConsolePage.scss  ConsolePage.tsx  Tutor.tsx
frontend/src/services/: api.service.ts  audio.service.ts  phraseManager.ts
frontend/src/types/: index.ts
